configurar os botoes

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,3 +35,19 @@ iframe#tela{
     width: 267px;
     height: 466px;
 }
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 70px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.411);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.404);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.541);
+    transition: transform .4s, border .7s;
+}
